# Beholder

./: .gitignore  CMakeCache.txt  CMakeList.txt  CMakeLists.txt  Makefile  README.md  SOAP_SNIPPETS  STEPS.txt  bhldr.registerInfo.req.xml  buildall.sh  buildcorba.sh  calculator.cpp  calculator.h  hello.cpp  install_manifest.txt  server.cpp  setupSOAP.sh
Beholder/: CMakeLists.txt  Makefile
Beholder/3PP/: CMakeLists.txt  Makefile
Beholder/DataModels/: CMakeLists.txt  Makefile
Beholder/DataModels/Information/: Information.cxx  Information.hxx
Beholder/DataModels/Msg/: GenericMsg.hxx  SOAPMsg.hxx
Beholder/DataModels/Msg/Base/: BaseMsg.cxx
Beholder/Entities/: CMakeLists.txt  EntityManager.cxx  EntityManager.hxx  Makefile
Beholder/Entities/Base/: Entity.cxx  Entity.hxx
Beholder/LocalHelpers/: CMakeLists.txt  Makefile
Beholder/LocalHelpers/MachineUtils/: Machine.cxx  Machine.hxx  MachineUtils.cxx  MachineUtils.hxx
Beholder/LocalHelpers/MachineUtils/SchemaHelpers/: AnalogData.hh  DigitalData.hh  SchemaUtils.cxx  SchemaUtils.hxx
Beholder/LocalHelpers/MachineUtils/SchemaHelpers/Schemas/: AnalogData.json  DigitalData.json
Beholder/LocalHelpers/VirtualTable/: VirtualTable.cxx  VirtualTable.hxx
Beholder/MessageProcessing/: CMakeLists.txt  Makefile
Beholder/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile
Beholder/test/AvroTest/: ApacheAvroTest.cxx
Beholder/test/DataModels/: InformationTest.cxx  MsgTest.cxx
Beholder/test/Entity/: EntityTest.cxx
Beholder/test/LocalHelpers/: LocalHelpersTest.cxx
CORBA/: CMakeLists.txt
CORBA/MsgProcessor/: CMakeLists.txt  GSOAP_CLIENT  GSOAP_SERVER  MsgProcessor.cpp  MsgProcessor.h  myapp.cpp
CORBA/cliente/: AAAAACMakeLists.txt  CMakeLists.txt  Makefile  cliente.cpp
CORBA/common/include/: BaseMsg.hxx  Beholder.hxx  EntityManager.hxx  GenericMsg.hxx  Information.hxx  MachineUtils.hxx  MsgProcessor.hxx  SOAPMsg.hxx  SchemaHandler.hxx  VirtualTable.hxx
CORBA/idl/: Beholder.idl  BeholderC.h  BeholderC.inl  BeholderS.cpp  BeholderS.h
CORBA/servidor/: CMakeLists.txt  Makefile  servidor.cpp
DSMComms/: CMakeLists.txt  Makefile
DSMComms/3PP/: CMakeLists.txt
DSMComms/DataModels/: CMakeLists.txt
DSMComms/DataModels/Msg/: SOAPMsg.cxx
DSMComms/DataModels/Msg/Base/: BaseMsg.hxx
DSMComms/Entities/: CMakeLists.txt  EntityManager.cxx
DSMComms/Entities/Base/: Entity.hxx
DSMComms/LocalHelpers/: CMakeLists.txt
DSMComms/LocalHelpers/MachineUtils/: MachineUtils.cxx
DSMComms/LocalHelpers/MachineUtils/SchemaHelpers/: DigitalData.hh  SchemaUtils.cxx  SchemaUtils.hxx
DSMComms/LocalHelpers/VirtualTable/: VirtualTable.hxx
DSMComms/MessageProcessing/: CMakeLists.txt
DSMComms/MessageProcessing/Beholder/: Beholder.cxx
DSMComms/MsgProcessor/: CMakeLists.txt  GSOAP_CLIENT.cgi  GSOAP_SERVER.cgi  MsgProcessor.cpp  bhldr.registerInfo.req.xml  myapp.cpp
DSMComms/MsgProcessor/cmake/: FindGSOAP.cmake
DSMComms/cliente/: AAAAACMakeLists.txt  Makefile  MsgProcessor.h  cliente.cgi  cliente.cpp  soap.GNU
DSMComms/idl/: Beholder.idl  BeholderC.cgi  BeholderC.cpp  BeholderC.h  BeholderS.cpp  BeholderS.h
DSMComms/servidor/: BeholderI.cpp  BeholderI.h  Makefile  servidor.cpp
memory_test/: AnalogData.json  main.cxx  t
scripts/: buildall.sh  setupSOAP.sh  testgsoap.sh
scripts/test_scripts/: lookup.xml  request.py
scripts/test_scripts/memory_test/: CMakeLists.txt  Makefile  test.tmp
scripts/test_scripts/mock_client/: client.py
scripts/test_scripts/simulation/: analisys.py  items.txt  lookup.py  register.py
scripts/test_scripts/soap_test/: CMakeLists.txt  Makefile  hello.cpp  ns.hello.req.xml  soap.GNU
soap_test/: CMakeLists.txt  GSOAP_CLIENT  GSOAP_SERVER  hello.cpp  myapp.cpp  soapteste.cgi
soap_test/Hidden/: myapp.cpp
soap_test/wsdl/: ns.wsdl
src/: CMakeLists.txt  INSTRUCTIONS.md  makefile
src/3PP/: CMakeLists.txt
src/CORBA/cliente/: Makefile
src/CORBA/idl/: BeholderC.h  BeholderS.cpp  BeholderS.h
src/CORBA/servidor/: BeholderI.h  Makefile
src/DataModels/: CMakeLists.txt
src/DataModels/Information/: Information.cxx  Information.hxx
src/DataModels/Information/Base/: Info.cxx  Info.hxx
src/DataModels/Msg/: GenericMsg.cxx  GenericMsg.hxx  SOAPMsg.hpp  SOAPMsg.hxx
src/DataModels/Msg/Base/: BaseMsg.cxx  BaseMsg.hxx
src/Entities/: CMakeLists.txt  EntityManager.cxx  EntityManager.hxx
src/Entities/Base/: Entity.cxx  Entity.hxx
src/Lib/: CMakeLists.txt
src/LocalHelpers/: CMakeLists.txt
src/LocalHelpers/MachineUtils/: Machine.cxx  Machine.hxx  MachineUtils.cxx  MachineUtils.hpp  MachineUtils.hxx
src/LocalHelpers/MachineUtils/SchemaHelpers/: AnalogData.hh  SchemaHandler.cxx  SchemaHandler.hxx  SchemaUtils.cxx  SchemaUtils.hxx
src/LocalHelpers/MachineUtils/SchemaHelpers/GeneratedHeaders/: AnalogData.hh  DigitalData.hh
src/LocalHelpers/MachineUtils/SchemaHelpers/Schemas/: DigitalData.json
src/LocalHelpers/VirtualTable/: DigitalData.json  VirtualTable.cxx  VirtualTable.hpp  VirtualTable.hxx
src/LocalHelpers/VirtualTable/DataDefinitions/: AnalogData.json
src/LocalHelpers/VirtualTable/Helper/: AvroHelper.cxx  AvroHelper.hxx  AvrosHelper.cxx  AvrosHelper.hxx
src/MessageProcessing/: CMakeLists.txt  Makefile
src/MessageProcessing/Actors/: Sender.cxx  Sender.hxx
src/MessageProcessing/Beholder/: Beholder.cxx  Beholder.hpp  Beholder.hxx
src/MessageProcessing/Beholder/idl/: Beholder.idl
src/MessageProcessing/MsgProcessor/: MsgProcessor.cxx  MsgProcessor.hpp  MsgProcessor.hxx
src/tests/: Makefile
